; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/extr_http.c_evhttp_connection_start_detectclose.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/extr_http.c_evhttp_connection_start_detectclose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evhttp_connection = type { i32, i32 }

@EVHTTP_CON_CLOSEDETECT = common dso_local global i32 0, align 4
@EV_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evhttp_connection*)* @evhttp_connection_start_detectclose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @evhttp_connection_start_detectclose(%struct.evhttp_connection* %0) #0 {
  %2 = alloca %struct.evhttp_connection*, align 8
  store %struct.evhttp_connection* %0, %struct.evhttp_connection** %2, align 8
  %3 = load i32, i32* @EVHTTP_CON_CLOSEDETECT, align 4
  %4 = load %struct.evhttp_connection*, %struct.evhttp_connection** %2, align 8
  %5 = getelementptr inbounds %struct.evhttp_connection, %struct.evhttp_connection* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = or i32 %6, %3
  store i32 %7, i32* %5, align 4
  %8 = load %struct.evhttp_connection*, %struct.evhttp_connection** %2, align 8
  %9 = getelementptr inbounds %struct.evhttp_connection, %struct.evhttp_connection* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @EV_READ, align 4
  %12 = call i32 @bufferevent_enable(i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @bufferevent_enable(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
